# Reel-Review

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260430_0001_initial_schema.py  20260504_0002_results_social_features.py  20260504_0003_watch_provider_refresh_timestamp.py  20260508_0004_movie_trailer_key.py  20260509_0005_movie_requests.py  20260512_0006_admin_settings.py  20260515_0007_drop_selection_votes.py  857777b088ee_add_user_privacy_and_display_name_fields.py
backend/app/: initial_data.py  main.py  seed.py  seo.py
backend/app/api/: deps.py  main.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py
backend/app/models/: __init__.py  admin_setting.py  movie.py  movie_request.py  rating.py  review_like.py  review_reply.py  review_report.py  user.py  weekly_drop.py  weekly_drop_vote.py
backend/app/schemas/: admin_settings.py  archive.py  drop.py  drop_selection.py  rating.py  (+2 more)
backend/scripts/: refresh_movie_metadata.py
backend/tests/: conftest.py  test_admin_dashboard.py  test_admin_movie_analytics.py  test_admin_settings.py  test_admin_users.py  test_archive.py  test_auth.py  test_drop_selection.py  test_leaderboards.py  test_main.py  test_models.py  test_moderation.py  test_movie_requests.py  test_movies.py  test_nolofication.py  test_rating_next_vote.py  test_results.py  test_seed.py  test_seo.py  test_users.py
(+127 files in other folders)
